--- a/GenerateCppFiltersExtension/VSPackage.resx
+++ b/GenerateCppFiltersExtension/VSPackage.resx
@@ -118,13 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="110" xml:space="preserve">
-    <value>GenerateFilter Extension</value>
+    <value>GenerateCppFilters Extension</value>
   </data>
   <data name="112" xml:space="preserve">
-    <value>GenerateFilter Visual Studio Extension Detailed Info</value>
+    <value>GenerateCppFilters Visual Studio Extension Detailed Info</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="400" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\GenerateFilterPackage.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Resources\GenerateCppFiltersPackage.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
